# Abidoshaker

./: .gitignore  Cargo.toml  README.md
erc20cairo/: Readme.md  Scarb.toml
erc20cairo/src/: erc20.cairo
erc20cairo/tests/: test_erc20.cairo
src/: deploy.rs  main.rs
