[package]
name = "Abidoshaker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs" }
toml = "0.8.13"
serde = "1.0.136"
serde_derive = "1.0.136"
